--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,42 @@
     <meta charset="utf-8">
     <title>Grow Stuff</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
-
+    <header>
+      <nav>
+        <div class="nav-wrapper green darken-2">
+          <a href="#" class="brand-logo">Grow Stuff</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="sass.html">Plant your seed somewhere meaningful.</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="container">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="" id="image">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4" id="name"></span>
+          <p id="bio"></p>
+          <div class="row">
+            <div class="col s6">
+              <center class="next">
+                <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">delete_forever</i></a>
+              </center>
+            </div>
+            <div class="col s6">
+              <center class="next">
+                <a class="btn-floating btn-large waves-effect waves-light green"><i class="material-icons">favorite</i></a>
+              </center>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
     <script src="app.js" charset="utf-8"></script>
   </body>
