:sparkles: add loading image

--- a/client/index.html
+++ b/client/index.html
@@ -10,14 +10,21 @@
     <header>
       <nav>
         <div class="nav-wrapper green darken-2">
-          <a href="#" class="brand-logo">Grow Stuff</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Plant your seed somewhere meaningful.</a></li>
-          </ul>
+          <div class="container">            
+            <a href="#" class="brand-logo">Grow Stuff</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li>Plant your seed somewhere meaningful.</li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
     <main class="container">
+      <div class="loading">
+        <center>
+          <img src="https://media2.giphy.com/media/9z0UiyqFOfBXq/giphy.gif" alt="">
+        </center>
+      </div>
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="" id="image">
